# cute-viz

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
cute_viz/: __init__.py  core.py
examples/: 1d_layout_example.py  hierarchical_layout_example.py  layout_example.py  ldmatrix_copy_example.py  mma_atom_example.py  swizzle_layout_example.py  tv_layout_example.py
